first front-end layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-form-component></app-form-component>
+<body class="wrapper">
+  <app-header></app-header>
+  <app-form-beginner></app-form-beginner>
+  <app-footer></app-footer>
+</body>
