--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <body class="wrapper">
   <app-header></app-header>
-  <app-form-beginner></app-form-beginner>
+  <app-form></app-form>
   <app-footer></app-footer>
 </body>
