--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,13 +1,9 @@
-<section class="form">
-  <section>
+<section class="content" [ngClass]="{'advanced': advanced == true, 'beginner': advanced == false}">
+  <section class="form">
     <span class="p-float-label">
       <input id="keyword" [(ngModel)]="keyword" type="text" pInputText> 
       <label for="keyword">Palavra-chave</label>
     </span>
-    <section class="two-buttons-row">
-      <p-button (click)="submitForTweetAnalysis()" label="Analisar" ></p-button>
-      <p-button (click)="advanced = !advanced" label="Avançado" ></p-button>
-    </section>
     <span *ngIf="advanced" class="p-float-label">
       <input id="language" [(ngModel)]="language" type="text" pInputText> 
       <label for="language">Lingua</label>
@@ -16,9 +12,6 @@
       <input id="limit" [(ngModel)]="limit" type="text" pInputText> 
       <label for="limit">Limite de tweets analisados</label>
     </span> 
-  </section>
-  
-  <section class="three-buttons-row">
     <span *ngIf="advanced" class="p-float-label">
       <p-inputMask inputId="since" [(ngModel)]="since" mask="9999-99-99"></p-inputMask>
       <label for="since">De:</label>
@@ -27,9 +20,17 @@
       <p-inputMask inputId="until" [(ngModel)]="until" mask="9999-99-99"></p-inputMask>
       <label for="until">Até:</label>
     </span> 
-    <button pButton type="button" (click)="lowLimit()" icon="pi pi-angle-down" class="p-button-raised p-button-rounded"></button>
-    <button pButton type="button" (click)="mediumLimit()" icon="pi pi-angle-up" class="p-button-raised p-button-rounded"></button>
-    <button pButton type="button" (click)="highLimit()" icon="pi pi-angle-double-up" class="p-button-raised p-button-rounded"></button>
+
+    <section class="two-buttons-row">
+      <p-button (click)="submitForTweetAnalysis()" label="Analisar" ></p-button>
+      <p-button (click)="advanced = !advanced" label="Avançado" ></p-button>
+    </section>
+  </section>
+  
+  <section class="three-buttons-row" *ngIf="!advanced">
+    <button pButton type="button" pTooltip="Mais rápido e menos confiável" (click)="lowLimit()" icon="pi pi-angle-down" class="p-button-raised p-button-rounded"></button>
+    <button pButton type="button" pTooltip="Não tão rápido porém mais confiável" (click)="mediumLimit()" icon="pi pi-angle-up" class="p-button-raised p-button-rounded"></button>
+    <button pButton type="button" pTooltip="Devagar porém muito confiável" (click)="highLimit()" icon="pi pi-angle-double-up" class="p-button-raised p-button-rounded"></button>
   </section>
   <textarea pInputTextarea [(ngModel)]="result" [disabled]="true" [autoResize]="true"></textarea>
 </section>
