--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -10,7 +10,8 @@
       <label for="limit">Quantidade de tweets para análise</label>
     </span>
     <span *ngIf="advanced" class="p-float-label">
-      <p-calendar (onClose)="updateDateRange()" dateFormat="dd.mm.yy" [minDate]="minDateValue" [maxDate]="maxDateValue" [(ngModel)]="rangeDates" selectionMode="range" inputId="range"></p-calendar>
+      <p-calendar (onClose)="updateDateRange()" dateFormat="dd.mm.yy" [minDate]="minDateValue" [maxDate]="maxDateValue"
+        [(ngModel)]="rangeDates" selectionMode="range" inputId="range"></p-calendar>
       <label for="until">Tweets analisados dentro deste intervalo:</label>
     </span>
 
@@ -21,29 +22,43 @@
   </section>
 
   <p-tabView>
-    <p-tabPanel header="Sentimentos">
-      <p-chart type="radar" [data]="dataSent" [options]="chartOptionsSent" [style]="{'width': '40%'}"></p-chart>
+    <p-tabPanel header="Sentimentos (Gráfico em Barra)">
+      <section class="tab-content">
+        <p-chart type="bar" width="50vw" height="40vh" [data]="multiAxisData" [options]="multiAxisOptions"></p-chart>
+      </section>
+    </p-tabPanel>
+    <p-tabPanel header="Sentimentos (Gráfico Radar)">
+      <section class="tab-content">
+        <p-chart type="radar" width="30vw" height="30vh" [data]="dataSent" [options]="chartOptionsSent"></p-chart>
+      </section>
     </p-tabPanel>
     <p-tabPanel header="Polarização">
-      <p-chart type="doughnut" [data]="dataPol" [options]="chartOptionsPol" [style]="{'width': '40%'}"></p-chart>
+      <section class="tab-content">
+        <p-chart type="doughnut" width="30vw" height="30vh" [data]="dataPol" [options]="chartOptionsPol"></p-chart>
+      </section>
     </p-tabPanel>
     <p-tabPanel header="Nuvem de palavras">
-      <canvas id="wordcloudCanvas" width="600" height="400"></canvas>
+      <section class="tab-content">
+        <canvas id="wordcloudCanvas" width="600" height="400"></canvas>
+      </section>
     </p-tabPanel>
     <p-tabPanel header="Lista de tweets">
-      <p-table #table [value]="tweets" [paginator]="true" [rows]="10" 
-      currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} entradas" [rowsPerPageOptions]="[10,25,50]">
-        <ng-template pTemplate="header">
+      <section class="tab-content">
+        <p-table #table scrollHeight="flex" [value]="tweets" [paginator]="true" [rows]="10"
+          currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} entradas"
+          [rowsPerPageOptions]="[5,10]">
+          <ng-template pTemplate="header">
             <tr>
-                <th>Tweet</th>
+              <th>Tweet</th>
             </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-tweet>
+          </ng-template>
+          <ng-template pTemplate="body" let-tweet>
             <tr>
-                <td>{{tweet.text}}</td>
+              <td>{{tweet.text}}</td>
             </tr>
-        </ng-template>
-    </p-table>
+          </ng-template>
+        </p-table>
+      </section>
     </p-tabPanel>
-</p-tabView>
+  </p-tabView>
 </section>
