--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,16 @@
 .wrapper{
-  min-height: 100vh;
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
 app-footer{
-  margin-top: auto;
+  position: fixed;
+  height: 50px;
+  width: 100%;
+  bottom: 0;
+}
+app-header{
+  height: 151px;
+  width: 100%;
 }
