--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -41,7 +41,9 @@
   z-index: 1;
   margin-top: 10px;
 }
-
+::ng-deep .p-tooltip-text{
+  width: 33.5rem !important;
+}
 .graphs{
   width: 58.5rem;
   height: 46rem;
@@ -66,6 +68,7 @@
 }
 
 .two-buttons-row {
+  margin-bottom: 40px;
   margin-top: 10px;
   display: flex;
   justify-content: space-between;
