--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -3,8 +3,13 @@
   justify-content: space-evenly;
   align-items: baseline;
   flex-direction: row;
-  height: 100vh;
   margin-top: 30px;
+  margin-bottom: 30px;
+}
+::ng-deep p-button{
+  button{
+    white-space: nowrap !important;
+  }
 }
 .beginner {
   .form {
@@ -24,14 +29,12 @@
 
 .word-cloud {
   width: 58.5rem;
-  height: 46rem;
   display: flex;
   justify-content: space-between;
 }
 
 .lista-tweets {
   width: 58.5rem;
-  height: 46rem;
   display: flex;
   justify-content: flex-end;
 }
