--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,14 +3,5 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-}
-app-footer{
-  position: fixed;
-  height: 50px;
-  width: 100%;
-  bottom: 0;
-}
-app-header{
-  height: 151px;
-  width: 100%;
+  padding-bottom: 30px;
 }
