--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,8 +1,8 @@
 .nav-bar{
-  height: 151px;
+  height: 50px;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   background-image: url("../../../assets/bg-brimo.png");
 }
