--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -1,10 +1,8 @@
 .content {
   display: flex;
-  justify-content: space-evenly;
   align-items: baseline;
   flex-direction: row;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-left:10vw;
 }
 ::ng-deep p-button{
   button{
@@ -16,6 +14,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 323px;
+    margin-right: 50px;
   }
 
   .three-buttons-row {
@@ -47,6 +47,12 @@
 ::ng-deep .p-tooltip-text{
   width: 33.5rem !important;
 }
+.inputs{
+  width: 323px;
+}
+::ng-deep .inputs input{
+  width: 323px !important;
+}
 .graphs{
   width: 58.5rem;
   height: 46rem;
@@ -59,6 +65,8 @@
     flex-direction: column;
     justify-content: space-between;
     height: 292px;
+    width: 323px;
+    margin-right: 50px;
   }
 
   .three-buttons-row {
