--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,4 @@
 <header class="nav-bar">
-  <img src="../../../assets/brimo-logo.png">
+  <img style="height: 50px;
+  margin-left: 10vw;" src="../../../assets/brimo-logo.png">
 </header>
