--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -1,3 +1,23 @@
+@media screen and (max-width: 1368px){
+  p-tabView{
+    width: 50vw;
+  }
+  .graphs{
+    width: 38.5rem !important;
+  }
+  .word-cloud {
+    width: 38.5rem !important;
+    display: flex !important;
+    flex-direction: column !important;
+  }
+  .lista-tweets {
+    width: 38.5rem !important; 
+  }
+  #wordcloudCanvas{
+    width: 600px !important;
+    height: 400px !important;
+  }
+}
 .content {
   display: flex;
   align-items: baseline;
